@@ -12,6 +12,11 @@
 	* lisp/sawfish/cfg/widgets/gtk/*: removed unused
 	sawfish.cfg.widgets.gtk*
 
+	* lisp/sawfish/gtk/widgets/program.jl: removed 'program widget (just
+	an alias to 'file)
+
+	* lisp/sawfish/wm/ext/play-audio.jl: updated
+
 2011-06-04  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* configure.in: bump minimum librep to 0.92.1, new funcs required by
 	SawfishConfig
